# Winamp-Song-Deleter-Plugin

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: codeql.yml
src/: WinampSongDeleterPlugin.rc  plugin.cpp  resource.h
